--- a/helloworld.yml
+++ b/helloworld.yml
@@ -1,4 +1,6 @@
 - name: This is a hello-world example
+  hosts: localhost
+  connection: local 
   tasks:
     - name: Create a file called '/tmp/testfile.txt' with the content 'hello world'.
       copy:
