--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,5 +1,7 @@
   - name: "Playing with Ansible and Git"
     hosts: localhost
     connection: local
- - debug:
- msg: "Hello world"
+
+- name: Print the gateway for each host when defined
+  ansible.builtin.debug:
+    msg: "text to print"
