--- a/playbook.yaml
+++ b/playbook.yaml
@@ -2,5 +2,5 @@
     hosts: localhost
     connection: local
   - name: Print the gateway for each host when defined
-    ansible.builtin.debug:
+    debug:
       msg: "text to print"
