--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,7 +1,9 @@
-  - name: "Playing with Ansible and Git"
-    hosts: localhost
-    connection: local
-    
+---
+# This playbook prints a simple debug message
+- name: Echo 
+  hosts: localhost
+  connection: local
+
   tasks:
   - name: Print debug message
     debug:
