--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,8 +1,7 @@
 ---
 # This playbook prints a simple debug message
 - name: Echo 
-  hosts: localhost
-  connection: local
+  hosts: all
 
   tasks:
   - name: Print debug message
