--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,7 +1,7 @@
 ---
 # This playbook prints a simple debug message
 - name: Echo 
-  hosts: 54.151.35.88
+  hosts: "{{server-class}}"
 
   tasks:
   - name: Print debug message
