--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,7 +1,7 @@
 ---
 # This playbook prints a simple debug message
 - name: Echo 
-  hosts: "{{server-class}}"
+  hosts: "{{server_class}}"
 
   tasks:
   - name: Print debug message
