--- a/playbook.yaml
+++ b/playbook.yaml
@@ -11,3 +11,5 @@
     file:
       path: /tmp/sahlovs/java_dns
       state: directory
+  - name: download sources
+    get_url: url=https://repo1.maven.org/maven2/dnsjava/dnsjava/3.5.0/dnsjava-3.5.0.jar dest=/tmp/sahlovs/java_dns/dnsjava-3.5.0.jar
