--- a/ansible_new.yml
+++ b/ansible_new.yml
@@ -18,3 +18,6 @@
       src: /tmp/sahlovs/gradle/{{gradle_version}}
       dest: /tmp/sahlovs/gradle
       remote_src: yes
+  - name: Print gradle_version
+    debug:
+      msg: {{gradle_version}}
