--- a/ansible_new.yml
+++ b/ansible_new.yml
@@ -2,17 +2,18 @@
 # This playbook prints a simple debug message
 - name: Echo 
   hosts: "{{class}}"
-
+  vars:
+    extracted_hosts: "{{class}}"
   tasks:
   - name: Print debug message
     debug:
       msg: "{{text}}"
-  when: "{{class}}" == "all"
+  when: extracted_hosts == "all"
   - name: Creates directory
     file:
       path: /tmp/sahlovs/gradle
       state: directory
-  when: "{{class}}" == "back-end-servers"
+  when: extracted_hosts == "back-end-servers"
   - name: download sources
     get_url: url=https://services.gradle.org/distributions/{{gradle_version}} dest=/tmp/sahlovs/gradle/{{gradle_version}}
   - name: Extract foo.tgz into /var/lib/foo
@@ -20,8 +21,8 @@
       src: /tmp/sahlovs/gradle/{{gradle_version}}
       dest: /tmp/sahlovs/gradle
       remote_src: yes
-  when: "{{class}}" == "back-end-servers"
+  when: extracted_hosts == "back-end-servers"
   - name: Print gradle_version
     debug:
       msg: "{{gradle_version}}"
-  when: "{{class}}" == "back-end-servers"
+  when: extracted_hosts == "back-end-servers"
