--- a/playbook.yaml
+++ b/playbook.yaml
@@ -13,3 +13,7 @@
       state: directory
   - name: download sources
     get_url: url=https://repo1.maven.org/maven2/dnsjava/dnsjava/3.5.0/dnsjava-3.5.0.jar dest=/tmp/sahlovs/java_dns/dnsjava-3.5.0.jar
+  - name: move_build
+    copy:
+      src: test.file
+      dest: /tmp/sahlovs/
