--- a/playbook_123.yaml
+++ b/playbook_123.yaml
@@ -1,1 +1,8 @@
-
+  - name: "Playing with Ansible and Git"
+    hosts: localhost
+    connection: local
+    
+   tasks:
+  - name: Print debug message
+    debug:
+      msg: "Spider fly"
